--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "@element-plus/icons-vue": "^2.3.1",
+    "@icon-park/vue-next": "^1.4.2",
+    "ant-design-vue": "^4.1.2",
+    "axios": "^1.6.8",
     "element-plus": "^2.6.1",
+    "file-saver": "^2.0.5",
+    "highlight.js": "^11.9.0",
+    "markdown-it": "^14.1.0",
+    "mitt": "^3.0.1",
     "vue": "^3.4.19",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
+    "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.11.24",
     "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.71.1",
