分包+AI+页面完善

--- a/InsightSpace_WxMiniProgram/src/manifest.json
+++ b/InsightSpace_WxMiniProgram/src/manifest.json
@@ -54,7 +54,11 @@
     "setting": {
       "urlCheck": false
     },
-    "usingComponents": true
+    "usingComponents": true,
+    "optimization": {
+      "subPackages": true
+    },
+    "lazyCodeLoading": "requiredComponents"
   },
   "mp-alipay": {
     "usingComponents": true
